# Tarologist-AI

./: .gitignore  LICENSE  README.md  pyproject.toml
src/: finetuning.py
src/datasets/: tarot_dataset.py
